test/org/midica/testfiles/failing/eff-flow-nrpn-num-too-high.midica
INCLUDE inc/instruments.midica


0: nrpn=999999999999999.set(50)
